# ComfyUI-MLX

./: .gitignore  README.md  execution.py  folder_paths.py  nodes.py  pyproject.toml  requirements.txt
comfy/: model_management.py  samplers.py  sd.py  utils.py
comfy/backends/: __init__.py  base.py  benchmark_stats.py  gguf_backend.py  mlx_backend.py  mlx_denoiser_island.py  mlx_dit_planner.py  mlx_klein.py  mlx_ltx_backend.py  mlx_ltx_native_kernels.py  mlx_quant.py  mlx_z_image.py  registry.py  transformers_backend.py
comfy/backends/mlx_dit_native/: __init__.py  kernels.py
comfy/backends/mlx_dit_native/metal/: attn_prep_qknorm_rope_pack.metal  ffn_packed_silu_mul_split.metal  ffn_silu_mul.metal  native_bf16_self_attention.metal  rmsnorm_residual_gate.metal
comfy/backends/mlx_ltx_native/: __init__.py  kernels.py
comfy/backends/mlx_ltx_native/metal/: gated_residual.metal  gelu_approx.metal  residual_add.metal  rmsnorm_residual.metal  rope_pair.metal  rope_split.metal  scale_shift.metal
comfy/ldm/lightricks/: av_model.py  mlx.py  model.py
comfy/text_encoders/: acceleration.py  baseline.py  gemma4.py  mlx.py
comfy_api/latest/_input_impl/: video_types.py
comfy_extras/: nodes_custom_sampler.py  nodes_hunyuan.py  nodes_lt.py  nodes_lt_audio.py  nodes_lt_upsampler.py  nodes_textgen.py  nodes_video.py
docs/: fork_review_package_20260614.md  fork_review_package_20260615.md  mlx_local_backend_spike.md  mlx_ltx.md  mlx_native_workflows.md  pii_sensitive_audit_20260615.md
docs/plans/: june13plan.md
docs/workflows/: ltx23_mlx_q4_native_island_i2v.json  ltx23_mlx_q4_native_island_t2v.json  ltx23_mlx_q4_workflow.json
mlx_workflows/: README.md
mlx_workflows/api/: 01_lm_text_generate.json  02_vlm_image_text_generate.json  03_tts_save_audio.json  04_asr_load_audio_text_generate.json  05_embeddings_text_generate.json
mlx_workflows/fixtures/: mlx_tts_for_asr.flac
tests-unit/comfy_api_test/: video_types_test.py
tests-unit/comfy_test/: folder_path_test.py  gemma4_mtp_test.py  mlx_backend_test.py  mlx_denoiser_island_test.py  mlx_dit_native_test.py  mlx_dit_planner_test.py  mlx_klein_backend_test.py  mlx_ltx_backend_test.py  mlx_ltx_test.py  textgen_acceleration_test.py  textgen_baseline_backend_test.py
tests/e2e/: mlx_api_text_generate_workflow.json  run_mlx_api_e2e.py
