[project]
name = "ComfyUI"
version = "0.22.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[project.optional-dependencies]
mlx = [
  "mlx>=0.31.2,<0.32",
  "huggingface_hub",
]
mlx-llm = [
  "mlx-lm>=0.31.3",
  "huggingface_hub",
]
mlx-vlm = [
  "mlx-vlm>=0.5.0",
  "pillow",
  "huggingface_hub",
]
mlx-audio = [
  "mlx-audio>=0.4.3",
  "huggingface_hub",
]
mlx-embeddings = [
  "mlx-embeddings>=0.1.0",
  "huggingface_hub",
]
mtplx = [
  "mtplx>=0.3.7",
]
mlx-ltx = [
  "mlx>=0.31.2,<0.32",
  "ltx-core-mlx>=0.14.8,<0.15",
  "ltx-pipelines-mlx>=0.14.8,<0.15",
  "huggingface_hub",
  "pillow",
  "av",
]
mlx-all = [
  "mlx-lm>=0.31.3",
  "mlx-vlm>=0.5.0",
  "mlx-audio>=0.4.3",
  "mlx-embeddings>=0.1.0",
  "mlx>=0.31.2,<0.32",
  "ltx-core-mlx>=0.14.8,<0.15",
  "ltx-pipelines-mlx>=0.14.8,<0.15",
  "pillow",
  "av",
  "huggingface_hub",
]
benchmark-gguf = [
  "llama-cpp-python",
  "huggingface_hub",
]
benchmark-transformers = [
  "transformers",
  "torch",
  "huggingface_hub",
]
benchmark-all = [
  "llama-cpp-python",
  "transformers",
  "torch",
  "huggingface_hub",
  "av",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]
